RESOLVED FIXED38607
Many AXUnknown showing up in the hierarchy
https://bugs.webkit.org/show_bug.cgi?id=38607
Summary Many AXUnknown showing up in the hierarchy
chris fleizach
Reported 2010-05-05 14:24:20 PDT
In recent builds of WebKit, WebKit AX hierarchy is suddenly popping up with lots of AXUnknown. This is a regression
Attachments
Patch (5.57 KB, patch)
2010-05-05 14:28 PDT, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2010-05-05 14:24:34 PDT
not sure when it regressed, but simple enough fix
chris fleizach
Comment 2 2010-05-05 14:28:38 PDT
chris fleizach
Comment 3 2010-05-05 16:14:09 PDT
Note You need to log in before you can comment on or make changes to this bug.