Many AXUnknown showing up in the hierarchy https://bugs.webkit.org/show_bug.cgi?id=38607

Reviewed by Beth Dakin.

WebCore: 

The RenderTableSection should not be an accessible element.

Test: platform/mac/accessibility/parent-of-table-row-is-table.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):

LayoutTests: 

* platform/mac-leopard/Skipped:
* platform/mac-tiger/Skipped:
* platform/mac/accessibility/parent-of-table-row-is-table-expected.txt: Added.
* platform/mac/accessibility/parent-of-table-row-is-table.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@58843 bbb929c8-8fbe-4397-9dbb-9b2b20218538