third_party/WebKit/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -3016,6 +3016,10 @@ AccessibilityRole AccessibilityRenderObject::determineAccessibilityRole()
         return TableRole;
 #endif
 
+    // Table sections should be ignored.
+    if (m_renderer->isTableSection())
+        return IgnoredRole;
+    
 #if PLATFORM(GTK)
     if (m_renderer->isHR())
         return SplitterRole;
